<resources>
    <string name="app_name">Pyhie</string>
    <string name="main_activities">Main Habits</string>
    <string name="my_account">Me</string>
    <string name="good_habits">Good Habits</string>
    <string name="bad_habits">Bad Habits</string>
    <string name="good_morning">GOOD MORNING!\n %s</string>
    <string name="good_afternoon">GOOD AFTERNOON!\n %s</string>
    <string name="good_evening">GOOD EVENING!\n %s</string>
    <string name="good_noght">GOOD NIGHT. \n %s</string>
    <string name="wentToBed">You went to bed at %d hours and %d minutes</string>
    <string name="wokeUp">You woke up at %d hours and %d minutes</string>
    <string name="read_about">Read about main habits</string>
    <string name="how_it_works">How it works</string>
    <string name="menu_daily_advice">Daily advices</string>
    <string name="notification_channel_one">channel one</string>
    <string name="notification_description">not descr</string>
    <string name="activities_not_completed">You still have main habits that you have not completed today.</string>
    <string name="its_time_for_breakfast.">It\'s time for your breakfast.</string>
    <string name="its_time_for_lunch.">It\'s time for your lunch.</string>
    <string name="its_time_for_dinner.">It\'s time for your dinner.</string>
    <string name="notification_name">Activities Reminder</string>
    <string name="sleeping_habit">Sleeping routine</string>
    <string name="eating_habit">Eating routine</string>
    <string name="balanced">Balanced</string>
    <string name="daily_planing">Daily Planing</string>
    <string name="cleaning_habit">Cleaning and Organising</string>
    <string name="percent">%</string>
    <string name="your_sleeping_efficiency">Your sleeping efficiency</string>
    <string name="overall">Overall</string>
    <string name="last_7_days">This week</string>
    <string name="sleep_quality">Sleep quality</string>
    <string name="previous_days">Previous days</string>
    <string name="time_slept">You went to bed at %s and woke up at %s</string>
    <string name="sleepDuration">Time slept: %d hours</string>
    <string name="points_earned">Points earned: %.1f</string>
    <string name="sleep_log">Sleep log</string>
    <string name="sleep_prefernces">Show your sleep preferences</string>
    <string name="what_time_did_you_go_to_bed">What time did you go to bed last night?</string>
    <string name="what_time_did_you_woke_up">What time did you woke up?</string>
    <string name="submit">Submit</string>
    <string name="submit_cap">SUBMIT</string>
    <string name="went_to_bed1"> You went to bed at %02d:%02d.</string>
    <string name="woke_up1"> You woke up at %02d:%02d.</string>
    <string name="add_more_sleep_times">Add more sleep times</string>
    <string name="what_time_you_prefer_to_wake_up">What time you prefer to wake up?</string>
    <string name="what_time_you_prefer_to_go_to_bed">What time you prefer to go to bed?</string>
    <string name="change">CHANGE</string>
    <string name="slept_well">Slept well</string>
    <string name="slept_as_usual">Slept as usual</string>
    <string name="slept_badly">Slept badly</string>
    <string name="great_overall">Well done! Your overall %s is great!</string>
    <string name="not_bad_overall">Not bad! Your overall %s is satisfactory!</string>
    <string name="room_for_overall">Room for improvement. Your overall %s can be better.</string>
    <string name="bad_overall">Need for improvement. Your overall %s needs to get better.</string>
    <string name="preferred_bed_times">Your goal is to go to bed at %02d:%02d</string>
    <string name="preferred_woke_up_times">Your goal is to wake up at %02d:%02d</string>
    <string name="change_remove_sleeping_times">Change/Remove sleeping times</string>
    <string name="change_sleep_times">Change sleep times</string>
    <string name="sleep_preferences">Sleep Preferences</string>
    <string name="add_more">Add more</string>
    <string name="close">Close</string>
    <string name="save">Save</string>
    <string name="last_week">Last week</string>
    <string name="average_time_slept">Average time slept: %d hours %d minutes</string>
    <string name="average_time_waking_up">Average time waking up: %02d:%d</string>
    <string name="average_time_going_to_bed">Average time going to bed: %02d:%02d</string>
    <string name="well_done">Well done!</string>
    <string name="habit_is_now_complete">%s is now complete</string>
    <string name="you_ve_earned_points">You\'ve earned %.1f points!</string>
    <string name="show_eating_preferences">Show eating preferences</string>
    <string name="eating_quality">Eating quality</string>
    <string name="eating_log">Eating Log</string>
    <string name="add_more_meals">Add more meals</string>
    <string name="pref_meal1">Your goal is to have first meal at %02d:%02d</string>
    <string name="pref_meal2">Your goal is to have second meal at %02d:%02d</string>
    <string name="pref_meal3">Your goal is to have third meal at %02d:%02d</string>
    <string name="pref_meal4">Your goal is to have fourth meal at %02d:%02d</string>
    <string name="pref_meal5">Your goal is to have fifth meal at %02d:%02d</string>
    <string name="meal_one_button">First meal was at %02d:%02d. It was %s. You %s</string>
    <string name="meal_two_button">You had second meal at %02d:%02d. It was %s. You %s</string>
    <string name="meal_three_button">You had third meal at %02d:%02d. It was %s. You %s</string>
    <string name="meal_four_button">You had fourth meal at %02d:%02d. It was %s. You %s</string>
    <string name="meal_fifth_button">You had fifth meal at %02d:%02d. It was %s.You %s</string>
    <string name="how_healthy">Would you say your meal was:</string>
    <string name="unhealthy">Unhealthy</string>
    <string name="partially_unhealthy">Partially unhealthy</string>
    <string name="partially_healthy">Partially healthy</string>
    <string name="healthy">Healthy</string>
    <string name="and_it_was">It was %s</string>
    <string name="health_text"> Your meal was %s</string>
    <string name="change_add_times">Change/add times</string>
    <string name="would_you_say">Would you say that you:</string>
    <string name="kitchen_text_done">Your kitchen is %s</string>
    <string name="overeaten">Overeaten</string>
    <string name="ate_just_enough">Ate just enough</string>
    <string name="ate_not_enough">Ate not enough</string>
    <string name="woke_up_time_planner">Wake up time %s</string>
    <string name="bed_time_planner">Bed time %s</string>
    <string name="meals_planner">%s meal</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="daily_activity">Daily Activity</string>
    <string name="select_time">Select time</string>
    <string name="time">%02d:%02d</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="completed">Completed</string>
    <string name="not_completed">Not completed</string>
    <string name="remaining_activities">You have %d uncompleted activities today.</string>
    <string name="complete_planner">Complete your daily planner for tomorrow.\n %s </string>
    <string name="sleeping_habit_title">Sleeping Routine</string>
    <string name="add_change_times">Add/Change Times</string>
    <string name="eating_habit_title">Eating Routine</string>
    <string name="tomorrow_is_completed">Great! Your planner for tomorrow is completed.</string>
    <string name="main_habit_is_completed">Thank you! %s is completed for today.</string>
    <string name="cleaning_habit_title">Cleaning Habit</string>
    <string name="cleaning_efficiency">Cleaning Efficiency</string>
    <string name="clean">Clean</string>
    <string name="unclean">Unclean</string>
    <string name="partially_clean">Partially clean</string>
    <string name="partially_unclean">Partially unclean</string>
    <string name="do_you_have_any_dishes">Look around you living area, does it look organised and everything is where it suppose to be?</string>
    <string name="do_you_have_any_dishes_yes">Your living area is organised.</string>
    <string name="do_you_have_any_dishes_no">Your living area is not organised.</string>
    <string name="do_you_have_any_clothes">Do you have any laundry that needs to be done?</string>
    <string name="do_you_have_any_clothes_yes">You have some laundry that needs to be done.</string>
    <string name="do_you_have_any_clothes_no">You don\'t have any laundry that needs to be done.</string>
    <string name="bedroom_living_text">How would you describe state of your living room and bedroom?</string>
    <string name="kitchen_text">How would you describe state of your kitchen?</string>
    <string name="bedroom_living_text_done">Your bedroom and living room are %s</string>
    <string name="you_have_a_new_challenge">You have a new challenge!</string>
    <string name="reward_challenge">Reward: %d pts.</string>
    <string name="time_remaining_challenge">Time limit: %s</string>
    <string name="challenge_complete">Well done! %s is completed</string>
    <string name="reward_complete">You earned additional %d points!</string>
    <string name="challenge1_complete">Great! You completed your main habits before the end of the day.</string>
    <string name="current_challenges">Current challenge</string>
    <string name="no_challenges">You have no challenges. </string>
    <string name="have_we_met_before">Have we met before?</string>
    <string name="yes_i_have_an_account">Yes, I have an account</string>
    <string name="no_i_m_new_here">No, I\'m new here.</string>
    <string name="hi_there">Hi, there!</string>
    <string name="email">email</string>
    <string name="log_in">Log in</string>
    <string name="password">password</string>
    <string name="daily_advice1">You probably heard the term “Top one percent”, it usually refers to the most wealthy people in our society.
        Now using this app will most likely not get you to be one of the wealthiest people in your society. But you could still be in the top one percent of most effective,
        stress free or successful people, and it’s not that hard.\n\n
        How? Well study after study showed that people with regular sleeping and eating patterns are less prone to stress, they are getting less tired and in general have more energy throughout the day.
        On top of that people who keep and follow a daily planner are more organised and more effective at what they do, and same goes for people who regularly clean and organise their living area.\n\n
        Did you know that only 22% of people in the United Kingdom sleep in regular patterns, less than 10% monitor their sleep times.
        Only about 28% of people have their food at the same time every day. About 18% clean and organise their living area regularly and about 10% keep a daily planner.
        So in total only about 1% - 2% of people will do all these things at the same time, and it is very likely that these people are the most effective and stress free around us.\n\n
        So by simply organising these simple activities into your daily habits, will put you into the “Top one percent”.
</string>
    <string name="unfortunately_you_missed_deadline_for_this_habit">Unfortunately you missed deadline for this habit.</string>
    <string name="_10_points">- 10 points</string>
    <string name="back">Back</string>
    <string name="don_t_forget_you_need_to_submit_main_habits_every_day_before_midnight_in_order_to_avoid_penalty_points">(Don\'t forget you need to submit main habits every day before midnight in order to avoid penalty points.)</string>
    <string name="be_in_the_top_one_percent">Be in the top one percent.</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="back_to_main_menu">Back to main menu</string>
</resources>